Bug 694138: Support an array of strings as keyPath on objectStores and indexes. r=janv/bent